<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="goToRegister">Go to Register</string>
    <string name="goToLogin">Go to Log In</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="orderButton">Place an Order</string>
    <string name="empty_username_error">Enter the username</string>
    <string name="empty_password_error">Enter the password</string>
    <string name="return_button">Return</string>
    <string name="goToTableChoiceButton">Choose a table</string>
    <string name="finalize_order_button">Finalize Order</string>
    <string name="something_went_wrong_error">Something went wrong</string>
    <string name="return_home_button">Return Home</string>
    <string name="order_food_button">Order Food</string>
    <string name="my_orders_button">My Orders</string>
    <string name="log_out_button">Log out</string>
    <string name="table_unavailable">Table unavailable</string>
    <string name="choose_button">Choose</string>
    <string name="an_unavailable_table_description">an unavailable table</string>
    <string name="an_available_table_description">an available table</string>
    <string name="your_orders_heading">"Your Orders: "</string>
    <string name="dishes">"Dishes: "</string>
    <string name="table_number">"Table Number: "</string>
    <string name="table">"Table: "</string>
    <string name="status">"Status: "</string>
    <string name="price">"Price: "</string>
    <string name="choose_your_dishes_heading">Choose Your Dishes</string>
    <string name="dish_available">"Available: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dish_price">"Price: "</string>
    <string name="make_a_reservation_button">Make a Reservation</string>
    <string name="my_reservations_button">My Reservations</string>
    <string name="welcome_to_the_restaurant_heading">Welcome to the Restaurant!</string>
    <string name="loading_ellipsis">Loading...</string>
    <string name="order_status_ready">Ready</string>
    <string name="order_status_being_prepared">Being Prepared</string>
    <string name="order_status_ready_to_pay">Ready to Pay</string>
    <string name="order_status_paid">Paid</string>
    <string name="ready_to_pay_button">Ready to Pay</string>
    <string name="reservation_from">"From: "</string>
    <string name="reservation_to">"To: "</string>
    <string name="reservation_table">"Table: "</string>
    <string name="no_reservations">No reservations</string>
    <string name="your_reservations_heading">Your Reservations</string>
    <string name="create_a_reservation_heading">Create a Reservation</string>
    <string name="loading_infrastructure">Loading infrastructure</string>
    <string name="loading_tables">Loading tables</string>
    <string name="choose_table_button">Choose Table</string>
    <string name="chosen_table">"Chosen Table: "</string>
    <string name="chosen_table_none">None</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_date_button">Choose Date</string>
    <string name="choose_time_button">Choose Time</string>
    <string name="date_and_time_picked">"Date and time picked: "</string>
    <string name="reservation_created">Reservation created!</string>
    <string name="seats">"Seats: "</string>
    <string name="enter_the_email_error">Enter the email</string>
    <string name="enter_the_age_error">Enter the age</string>
</resources>